--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,13 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1>Aqui vamos con todo Guibani y Alarii</h1>
-        <p>y este es el parrafo de inicio</p>
+        ><div id="container">
+            <div id="post">
+                <h1>Aqui vamos a hacer un post 
+                    atractivo e interesante.</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar 
+                 las cosas increibles que se pueden haer con ramas</p>
+            </div>
+        </div>       
     </body>
 </html>
