--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         ><div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>          
             <div id="post">
                 <h1>Aqui vamos a hacer un post 
                     atractivo e interesante.</h1>
