Finalizada la cabecera con diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,13 +6,14 @@
     <body>
         ><div id="container">
             <div id="cabecera">
-                Cabecera
-            </div>          
+                Hyperblog
+                <span id="tagline">Tu blog de confianza</span>
+            </div>              
             <div id="post">
                 <h1>Aqui vamos a hacer un post 
                     atractivo e interesante.</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar 
-                 las cosas increibles que se pueden haer con ramas</p>
+                 las cosas increibles que se pueden hacer con ramas</p>
             </div>
         </div>       
     </body>
