--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,10 @@
                     atractivo e interesante.</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar 
                  las cosas increibles que se pueden haer con ramas</p>
+                 <p>Los Blog son la mejor forma de compartir la información y tus ideas.
+                     Mucho mas que ir a conferencias o salir en YouTube.
+                     Excepto si eres un rockstar. 
+                     Pero estadisticamente no lo eres...por ahora.</p>
             </div>
         </div>       
     </body>
